config/samples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cp1
  namespace: cp1-system
  annotations:
   # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   # nginx.ingress.kubernetes.io/ssl-redirect: "true"
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: cp1
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cp1
            port:
              number: 9443
