config/samples/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cp2
  namespace: cp2-system
  annotations:
   # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   # nginx.ingress.kubernetes.io/ssl-redirect: "true"
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: cp2
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cp2
            port:
              number: 8443
